# PronunciaPA

./: .gitignore  BENCHMARK.md  BENCHMARKS.md  CLAUDE.md  COMMIT_GUIDE_GITHUB_DESKTOP.md  COMMIT_MENSAJES_RAPIDOS.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE.txt  Dockerfile  ERRORS_FOUND_AND_FIXED.md  EVM_ANALISIS_DETALLADO.md  EVM_DIAGNOSTICO.md  EVM_PLAN_ACCION.md  EVM_RESUMEN_EJECUTIVO.md  EXPLICACION_SIMPLE.md  IMPLEMENTATION_COMPLETE.md  Makefile  PLUGINS.md  PRIORIDAD_ALTA_MEDIA_SUMMARY.md  PRIORIDAD_COMMIT_MESSAGE.txt  PROCESS_COMPLETION_SUMMARY.md  README.md  RESUMEN_TRABAJO.md  SOLUCION_MODELOS.md  TESTING_CWESTERNBURGER.md  TODO.md  check_backlog.py  check_ids.py  conftest.py  debug_kernel.py  debug_pipeline_issue.py  debug_tts.py  dev.ps1  docker-compose.yml  list_routes.py  pyproject.toml  start_server.py  test_audio_endpoint.py  test_audio_fixed.py  test_audio_query.py  (+1 more)
.github/workflows/: ci.yml  tests.yml
conductor/: IMPLEMENTATION_SUMMARY.md  QUICKREF.md  business-model.md  model-policy.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: custom.md
config/: ipa_kernel.yaml  textref_phonemizer.yaml
configs/: accents.yaml  cli_ipa_min.yaml  cli_ipa_stub.yaml  ipa_kernel.yaml  local.example.yaml  local.yaml  minimal.yaml  normalization.yaml  sprint01.example.yaml
configs/ipa/: inventory_en-us.yaml  inventory_es-mx.yaml  pack_es-mx.yaml
data/benchmarks/: manifest.jsonl
data/ipa_catalog/: en.yaml  en_learning.yaml  es.yaml  es_learning.yaml
data/roadmaps/: en.yaml  es.yaml
data/sample/: manifest.jsonl  metadata.csv
docs/: ARCHITECTURE.md  COMPLETAR_PROYECTO.md  CONTRACT_FIXES_SUMMARY.md  CONTRIBUTING_BRANCHES.md  QUALITY_SLA.md  TEST_PLAN.md  TRACEABILITY_MATRIX.md  api_contracts.md  architecture_phonology.md  backlog.md  data.md  ipa_tokenization.md  kernel.md  milestone_ipa.md  mvp-validation.md  whisper_backend.md
docs/sprints/: README.md
frontend/: .gitignore  TODO.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/public/: app.html  index.html  plugins-fallback.json  practice.html
frontend/src/: App.tsx  api.ts  compare.ts  design-system.css  main.ts  main.tsx  practice.css  practice.ts  realtime.ts  recorder.ts  router.ts  style.css  theme.css  verify_contracts.ts  wizard.ts
ipa_core/: README.md  TODO.md  __init__.py  drill_types.py  errors.py  ipa_catalog.py  kernel.py  plugins.py  preprocessor_basic.py  types.py
ipa_core/analysis/: __init__.py  accent.py  drill_generator.py  position.py  syllabic.py
ipa_core/api/: README.md  TODO.md  __init__.py  cli.py  http.py  server.py
ipa_core/audio/: __init__.py  ffmpeg.py  files.py  markers.py  microphone.py  processing_chain.py  quality_gates.py  stream.py  vad.py
ipa_core/backends/: README.md  TODO.md  __init__.py  allosaurus_backend.py  asr_allosaurus.py  asr_stub.py  audio_io.py  audio_processing.py  base.py  lang_map.py  null_backend.py  onnx_engine.py  unified_ipa_backend.py  vad.py  vosk_backend.py  wav2vec2_backend.py  whisper_ipa.py
ipa_core/cli/: __init__.py  lessons.py  models.py
ipa_core/compare/: README.md  TODO.md  __init__.py  articulatory.py  base.py  compare.py  levenshtein.py  metrics.py  noop.py  oov_handler.py
ipa_core/config/: __init__.py  loader.py  overrides.py  resolution.py  schema.py
ipa_core/debug/: __init__.py  tracer.py
ipa_core/display/: __init__.py  ipa_display.py  vocal_tract_svg.py
ipa_core/history/: memory.py  sqlite.py
ipa_core/interfaces/: __init__.py  cli.py  interactive.py
ipa_core/kernel/: __init__.py  core.py
ipa_core/llm/: __init__.py  guardrails.py  llama_cpp.py  model_selector.py  ollama.py  ollama_feedback.py  onnx.py  rule_based.py  stub.py  utils.py
ipa_core/normalization/: __init__.py  inventory.py  mappings.py  normalizer.py  resolve.py
ipa_core/packs/: __init__.py  integrity.py  loader.py  minimal_pairs.py  schema.py
ipa_core/phonology/: __init__.py  features.py  grammar.py  inventory.py  representation.py  rule.py  segment.py  suprasegmentals.py
ipa_core/pipeline/: __init__.py  ipa_cleaning.py  postprocess.py  runner.py  transcribe.py
ipa_core/plugins/: __init__.py  asr_onnx.py  base.py  discovery.py  language_pack.py  manager.py  model_manager.py  models.py  registry.py
ipa_core/ports/: __init__.py  asr.py  compare.py  features.py  history.py  llm.py  oov.py  phoneme_corpus.py  preprocess.py  textref.py  tts.py
ipa_core/services/: __init__.py  adaptation.py  audio_quality.py  bench.py  catalog.py  comparison.py  error_report.py  fallback.py  feedback.py  feedback_store.py  lesson.py  model_installer.py  prosody.py  transcription.py  user_profile.py
ipa_core/testing/: __init__.py  benchmark.py
ipa_core/tests/: test_cli_run.py  test_e2e_contract.py  test_kernel.py  test_kernel_validation.py  test_stubs_integration.py  test_types_contracts.py  test_types_refinement.py
ipa_core/textref/: README.md  TODO.md  __init__.py  base.py  cache.py  cascading.py  cmu_dict.py  epitran.py  nop.py  (+7 more)
ipa_server/: __init__.py  http_errors.py  kernel_provider.py  main.py  models.py  realtime.py
outputs/: epitran_test.json  ipa_practice_es_ch_medial.json  ipa_practice_es_nye.json  ipa_practice_es_s.json  ipa_practice_es_s_final.json  ipa_practice_es_tap_medial.json  ipa_practice_es_trill_medial.json  ipa_practice_es_x_initial.json  ipa_practice_es_ye_initial.json  ipa_practice_es_ye_medial.json  report.csv  report.json
plugins/allosaurus/: pyproject.toml
plugins/allosaurus/ipa_plugin_allosaurus/: __init__.py  backend.py
plugins/allosaurus/tests/: conftest.py  test_asr_allosaurus.py
pronunciapa_client/: README.md  pubspec.yaml
scripts/: TODO.md  benchmark_tts_roundtrip.py  create_sample_audio.py  create_test_audio.py  debug_kernel.py  debug_pipeline.py  demo_client.py  download_models.py  generate_pack.py  generate_sample_dataset.py  install.sh  install_models.sh  offline_setup.py  record_wav.py  setup_dummy_model.py  sync_api_types.py  test_compare.py  test_setup.py  validate_dataset.py  verify_ipa_payload.js
(+334 files in other folders)
