[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipa-core"
version = "0.0.0"
description = "Reconocimiento y evaluación de pronunciación en IPA"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.24,<1",
    "python-multipart>=0.0.6,<0.0.10",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<0.28",
    "mypy>=1.11,<2",
]
speech = [
    "allosaurus>=1.0.0,<2",
    "sounddevice>=0.4.6,<1",
    "numpy>=1.26,<3",
    "pydub>=0.25.1,<1",
    "epitran>=1.24,<2",
]

[project.scripts]
pronunciapa = "ipa_core.api.cli:main"

[tool.setuptools]
packages = ["ipa_core"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Nota: los scripts y entry points se definirán cuando el microkernel
# y los plugins básicos estén implementados (ver docs/backlog.md y TODOs).
