[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipa-core"
version = "0.0.0"
description = "Reconocimiento y evaluación de pronunciación en IPA"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.24,<1",
    "python-multipart>=0.0.6,<0.0.10",
    "PyYAML>=6.0,<7",
    "typer>=0.9.0,<1",
    "rich>=13.0.0,<14",
    "numpy>=1.26,<3",
    "rapidfuzz>=3.0,<4",   # Levenshtein DP en C (~100x vs Python puro)
    "panphon>=0.20",       # Distancias articulatorias IPA via Hayes 2009 (~6000 segmentos)
    "cachetools>=5.3,<6",  # LRU+TTL cache (textref)
    "pydantic-settings>=2.0,<3",  # Config env-var loading (prefijo PRONUNCIAPA_)
    "imageio-ffmpeg>=0.5,<1",  # ffmpeg embebido; dependencia base para normalización de audio
]

[project.optional-dependencies]
asr = [
    "allosaurus>=1.0.0,<2",
    "pyctcdecode>=0.5.0,<1",
]
ollama = [
    "aiohttp>=3.9,<4",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "httpx>=0.27,<0.28",
    "mypy>=1.11,<2",
    "hypothesis>=6.100,<7",   # Property-based testing: PER, IPA tokenisation invariants
]
speech = [
    "sounddevice>=0.4.6,<1",
    "pydub>=0.25.1,<1",
    "epitran>=1.24,<2",
    "librosa>=0.10,<1",      # SNR / calidad de audio (numpy vectorizado)
    "soundfile>=0.12,<1",   # Backend de lectura para librosa
    "silero-vad>=1.0",      # VAD neural (preferred default sobre VAD de energía)
    "torch>=2.0,<3",        # Requerido por silero-vad
]
onnx = [
    "onnxruntime>=1.16,<2",
    "librosa>=0.10,<1",
    "soundfile>=0.12,<1",
    "numpy>=1.26,<3",
]
cmudict = [
    "nltk>=3.8,<4",
]
transformers = [
    "transformers>=4.30,<5",
    "torch>=2.0,<3",
]
vad = [
    "silero-vad>=1.0",
    "torch>=2.0,<3",
]
llm = [
    "jsonschema>=4.0,<5",   # Guardrails: validación estructural de respuestas LLM
]
bench = [
    "psutil>=5.9,<7",       # Medición de RSS para bench de adaptadores LLM
]

[project.scripts]
pronunciapa = "ipa_core.interfaces.cli:main"

[tool.setuptools]
packages = ["ipa_core", "ipa_plugin_allosaurus"]
package-dir = {"" = ".", "ipa_plugin_allosaurus" = "plugins/allosaurus/ipa_plugin_allosaurus"}

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    # ── Niveles de prueba (ISO/IEC/IEEE 29119) ───────────────────────────────
    "unit: L1 — componente aislado, sin modelos reales",
    "integration: L2 — interacción entre módulos, modo stub",
    "system: L3 — CLI + API HTTP completos, modo stub",
    "e2e: L4 — flujos de usuario completos (Flutter / scripts)",
    # ── Atributos de calidad (ISO/IEC 25010) ────────────────────────────────
    "functional: corrección funcional del producto (§8.1)",
    "performance: eficiencia de rendimiento — RTF, latencia, memoria (§8.4)",
    "security: seguridad — validación de inputs, path traversal, injección (§8.5)",
    "reliability: confiabilidad — idempotencia, degradación elegante (§8.3)",
    "usability: usabilidad — códigos HTTP correctos, mensajes claros (§8.6)",
    # ── Auxiliares ──────────────────────────────────────────────────────────
    "flutter: tests del cliente móvil Flutter",
    "slow: tests que tardan > 5 s (excluir con -m 'not slow')",
    "benchmark: mediciones de rendimiento fuera del contrato funcional",
]

[tool.coverage.run]
source = ["ipa_core"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[project.entry-points."pronunciapa.plugins"]
"asr.stub_ep" = "ipa_core.backends.asr_stub:StubASR"
"asr.allosaurus" = "ipa_plugin_allosaurus.backend:AllosaurusASR"
"asr.onnx" = "ipa_core.plugins.asr_onnx:ONNXASRPlugin"
"asr.whisper_onnx" = "ipa_core.plugins.asr_onnx:ONNXASRPlugin"
"asr.whisper" = "ipa_core.plugins.asr_onnx:ONNXASRPlugin"
"tts.default" = "ipa_core.tts.adapter:TTSAdapter"
"tts.piper" = "ipa_core.tts.piper:PiperTTS"
"tts.system" = "ipa_core.tts.system:SystemTTS"
"llm.llama_cpp" = "ipa_core.llm.llama_cpp:LlamaCppAdapter"
"llm.onnx" = "ipa_core.llm.onnx:OnnxLLMAdapter"
"llm.stub" = "ipa_core.llm.stub:StubLLMAdapter"

